# TactilityApps

./: release.py
.github/actions/release-apps/: action.yml
.github/workflows/: build-apps.yml  release-apps.yml
Apps/Calculator/: manifest.properties
Apps/Calculator/main/: CMakeLists.txt
Apps/Diceware/: manifest.properties
Apps/Diceware/main/: CMakeLists.txt
Apps/Diceware/main/Source/: Application.cpp  Application.h  Diceware.cpp  Diceware.h  main.cpp
Apps/GPIO/: manifest.properties  tactility.py
Apps/GPIO/main/Source/: Application.cpp
Apps/GraphicsDemo/: manifest.properties
Apps/HelloWorld/: manifest.properties  tactility.py
Apps/SerialConsole/main/Source/: ConsoleView.h
Apps/TwoEleven/: manifest.properties
Apps/TwoEleven/main/Source/: TwoEleven.cpp  TwoElevenUi.c
Libraries/NotSoStdlib/: CMakeLists.txt
Libraries/TactilityCpp/Include/TactilityCpp/: Uart.h
